minor layout changes

--- a/frontend/src/main/webapp/app/auction/live/live.component.html
+++ b/frontend/src/main/webapp/app/auction/live/live.component.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col d-flex justify-content-between">
+                        <div class="col d-flex justify-content-between" style="color: red;">
                             <span>End in</span>
                             <span>03:14:45</span>
                         </div>
@@ -71,16 +71,15 @@
             <div class="row d-flex justify-content-center my-4">
                 <hr class="hr w-50"/>
             </div>
-            <form class="row g-3 d-flex justify-content-center">
-                <div class="col-auto">
-                    <!-- <label for="inputPassword2" class="visually-hidden">Password</label> -->
-                    <input type="text" class="my-text-input">
+            <form class="row">
+                <div class="col-md-5  d-flex justify-content-center">
+                    <input type="text" class="form-control input-sm" id="bidAmount" placeholder="">
                 </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-success mb-3 btn-sm">Submit a bid (default + 20.000)</button>
+                <div class="col-md-5 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-success btn-sm" style="width: 100%; height: 80%;">Submit a bid (default + 20.000)</button>
                 </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3 btn-sm">Export</button>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary btn-sm" style="width: 100%; height: 80%">Export</button>
                 </div>
             </form>
             <div class="row d-flex justify-content-center my-4">
@@ -91,7 +90,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -100,7 +99,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -109,7 +108,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -118,7 +117,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -127,7 +126,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -136,7 +135,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -145,7 +144,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -154,7 +153,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
@@ -163,34 +162,7 @@
                     <div class="row">
                         <div class="col col-md-2">#10</div>
                         <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3 my-card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col col-md-2">#10</div>
-                        <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3 my-card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col col-md-2">#10</div>
-                        <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3 my-card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col col-md-2">#10</div>
-                        <div class="col col-md-8">14-04-2023 : 03:15:06</div>
-                        <div class="col col-md-2">15.000.000</div>
+                        <div class="col col-md-2 bid-price">15.000.000</div>
                     </div>
                 </div>
             </div>
