--- a/common-features/common-features-ui/src/app/dialog/dialog-add-user/dialog-add-user.component.html
+++ b/common-features/common-features-ui/src/app/dialog/dialog-add-user/dialog-add-user.component.html
@@ -6,17 +6,18 @@
 				<mat-form-field appearance="outline">
 					<mat-label>Account Code</mat-label>
 					<input matInput required>
-					<mat-hint align="end">nhut.nguyen</mat-hint>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<mat-label>Full Name</mat-label>
 					<input matInput>
-					<mat-hint align="end">Cao Minh Nhut</mat-hint>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<mat-label>Email</mat-label>
 					<input matInput required>
-					<mat-hint align="end">nhut.nguyen@gmail.com</mat-hint>
+				</mat-form-field>
+				<mat-form-field appearance="outline">
+					<mat-label>Phone Number</mat-label>
+					<input matInput>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<mat-label>Password</mat-label>
