--- a/common-features/common-features-ui/src/app/dialog/dialog-delete-user/dialog-delete-user.component.html
+++ b/common-features/common-features-ui/src/app/dialog/dialog-delete-user/dialog-delete-user.component.html
@@ -1,4 +1,5 @@
 <div class="delete-account">
+	<h2 mat-dialog-title>Delete Account</h2>
 	<mat-dialog-content>
 		<div class="form-delete-account">
 			<form>
