--- a/common-features/common-features-ui/src/app/console/account/user-detail/user-detail.component.html
+++ b/common-features/common-features-ui/src/app/console/account/user-detail/user-detail.component.html
@@ -2,6 +2,7 @@
     <h3>Account Information</h3>
     <mat-divider/>
     <mat-tab-group #tabRef>
+        <!-- User Profile -->
         <mat-tab label="Profile">
             <div class="user-profile">
                 <div class="account-section">
@@ -94,10 +95,34 @@
                         </div>
                     </div>
                 </div>
-                
-                <button mat-raised-button color="primary">Update</button>
+                <button mat-raised-button color="primary">Save</button>
             </div>
         </mat-tab>
-        <mat-tab label="Authorities"></mat-tab>
+        <mat-tab label="Authorities">
+            <div class="flex-parent-element">
+                <div class="flex-child-element">
+                    <div class="user-role">
+                        <div class="header"><h3>Roles</h3></div>
+                        <mat-selection-list #shoes>
+                            <mat-list-option *ngFor="let role of roles">
+                            {{role}}
+                            </mat-list-option>
+                        </mat-selection-list>
+                    </div>
+                </div>
+                <div class="flex-child-element">
+                    <div class="user-role">
+                        <div class="header"><h3>Groups</h3></div>
+                        <mat-selection-list #shoes>
+                            <mat-list-option *ngFor="let group of groups">
+                            {{group}}
+                            </mat-list-option>
+                        </mat-selection-list>
+                    </div>
+                </div>
+            </div>
+            <mat-divider/>
+            <button mat-raised-button color="primary">Save</button>
+        </mat-tab>
     </mat-tab-group>
 </div>
