--- a/common-features/common-features-ui/src/app/console/account/user/user.component.html
+++ b/common-features/common-features-ui/src/app/console/account/user/user.component.html
@@ -4,6 +4,7 @@
 		<div class="flex-child-element">
 			<div class="control-align-right">
 				<button mat-raised-button color="primary" (click)="openDialogCreateAccount()"><mat-icon>add</mat-icon>Add New</button>
+				<button mat-raised-button color="primary" (click)="openDialogImportAccount()"><mat-icon>add</mat-icon>Import</button>
 				<button mat-raised-button color="warn" (click)="openDialogDeleteAccount()"><mat-icon>delete</mat-icon>Delete</button>
 			</div>
 		</div>
