--- a/common-features/common-features-ui/src/app/console/account/role/role.component.html
+++ b/common-features/common-features-ui/src/app/console/account/role/role.component.html
@@ -1,1 +1,64 @@
-<p>role works!</p>
+<div class="user-management">
+	<div class="flex-parent-element">
+		<div class="flex-child-element"><h3>Roles Management</h3></div>
+		<div class="flex-child-element">
+			<div class="control-align-right">
+				<button mat-raised-button color="primary" (click)="openDialogCreateRole()"><mat-icon>add</mat-icon>Add New</button>
+				<button mat-raised-button color="primary" (click)="openDialogImportAccount()"><mat-icon>add</mat-icon>Import</button>
+				<button mat-raised-button color="warn" (click)="openDialogDeleteAccount()"><mat-icon>delete</mat-icon>Delete</button>
+			</div>
+		</div>
+	</div>
+	<mat-divider/>
+	<div class="mat-elevation-z8">
+		<table mat-table [dataSource]="dataSource">
+	
+		<ng-container matColumnDef="roleId">
+			<th mat-header-cell *matHeaderCellDef> Role Id</th>
+			<td mat-cell *matCellDef="let element">
+				<a mat-list-item [routerLink]="['/console/users/', element.roleId]">
+					<span class="sidenav-section">{{element.roleId}}</span>
+				</a>
+			</td>
+		</ng-container>
+
+		<ng-container matColumnDef="roleName">
+			<th mat-header-cell *matHeaderCellDef> Role Name </th>
+			<td mat-cell *matCellDef="let element">
+				<span class="sidenav-section">{{element.roleName}}</span>
+			</td>
+		</ng-container>
+	
+		<ng-container matColumnDef="description">
+			<th mat-header-cell *matHeaderCellDef> Description </th>
+			<td mat-cell *matCellDef="let element"> {{element.description}} </td>
+		</ng-container>
+
+		<!-- Checkbox Column -->
+		<ng-container matColumnDef="select">
+			<th mat-header-cell *matHeaderCellDef>
+			<mat-checkbox (change)="$event ? masterToggle() : null"
+							[checked]="selection.hasValue() && isAllSelected()"
+							[indeterminate]="selection.hasValue() && !isAllSelected()">
+			</mat-checkbox>
+			</th>
+			<td mat-cell *matCellDef="let row">
+			<mat-checkbox (click)="$event.stopPropagation()"
+							(change)="$event ? selection.toggle(row) : null"
+							[checked]="selection.isSelected(row)">
+			</mat-checkbox>
+			</td>
+		</ng-container>
+	
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr 
+			mat-row
+			*matRowDef="let row; columns: displayedColumns;"></tr>
+		</table>
+	
+		<mat-paginator [pageSizeOptions]="[5, 10, 20]"
+					showFirstLastButtons
+					aria-label="Select page of periodic elements">
+		</mat-paginator>
+	</div>
+</div>
