Adding a dialog for importing list of roles

--- a/common-features/common-features-ui/src/app/dialog/dialog-add-role/dialog-add-role.component.html
+++ b/common-features/common-features-ui/src/app/dialog/dialog-add-role/dialog-add-role.component.html
@@ -1,7 +1,7 @@
-<div class="create-account">
+<div class="dialog-container">
 	<h2 mat-dialog-title>Create New Role</h2>
 	<mat-dialog-content>
-		<div class="form-create-account">
+		<div class="dialog-form">
 			<form>
 				<mat-form-field appearance="outline">
 					<mat-label>Role Name</mat-label>
