--- a/common-features/common-features-ui/src/app/dialog/dialog-delete-user/dialog-delete-user.component.html
+++ b/common-features/common-features-ui/src/app/dialog/dialog-delete-user/dialog-delete-user.component.html
@@ -1,7 +1,7 @@
-<div class="delete-account">
+<div class="dialog-container">
 	<h2 mat-dialog-title>Delete Account</h2>
 	<mat-dialog-content>
-		<div class="form-delete-account">
+		<div class="dialog-form">
 			<form>
 				<mat-form-field appearance="outline">
 					<mat-label>Account Code</mat-label>
