--- a/common-features/common-features-ui/src/app/dialog/dialog-import-role/dialog-import-role.component.html
+++ b/common-features/common-features-ui/src/app/dialog/dialog-import-role/dialog-import-role.component.html
@@ -1,5 +1,6 @@
+<p>dialog-import-role works!</p>
 <div class="dialog-container">
-	<h2 mat-dialog-title>Import Accounts</h2>
+	<h2 mat-dialog-title>Import Roles</h2>
 	<mat-dialog-content>
         <input type="file" />
 	</mat-dialog-content>
