--- a/common-features/common-features-ui/src/app/console/account/role/role.component.html
+++ b/common-features/common-features-ui/src/app/console/account/role/role.component.html
@@ -5,7 +5,7 @@
 			<div class="control-align-right">
 				<button mat-raised-button color="primary" (click)="openDialogCreateRole()"><mat-icon>add</mat-icon>Add New</button>
 				<button mat-raised-button color="primary" (click)="openDialogImportRole()"><mat-icon>add</mat-icon>Import</button>
-				<button mat-raised-button color="warn" (click)="openDialogDeleteAccount()"><mat-icon>delete</mat-icon>Delete</button>
+				<button mat-raised-button color="warn" (click)="openDialogDeleteRole()"><mat-icon>delete</mat-icon>Delete</button>
 			</div>
 		</div>
 	</div>
