Added permission's page

--- a/common-features/common-features-ui/src/app/console/account/role/role.component.html
+++ b/common-features/common-features-ui/src/app/console/account/role/role.component.html
@@ -16,7 +16,7 @@
 		<ng-container matColumnDef="roleId">
 			<th mat-header-cell *matHeaderCellDef> Role Id</th>
 			<td mat-cell *matCellDef="let element">
-				<a mat-list-item [routerLink]="['/console/users/', element.roleId]">
+				<a mat-list-item [routerLink]="['/console/roles/', element.roleId]">
 					<span class="sidenav-section">{{element.roleId}}</span>
 				</a>
 			</td>
