Finished the designing for permission page

--- a/common-features/common-features-ui/src/app/console/account/role-detail/role-detail.component.html
+++ b/common-features/common-features-ui/src/app/console/account/role-detail/role-detail.component.html
@@ -12,6 +12,10 @@
                             <mat-label>Read</mat-label>
                             <input matInput required>
                         </mat-form-field>
+                        <mat-form-field>
+                            <mat-label>Description</mat-label>
+                            <textarea matInput placeholder="Comment"></textarea>
+                        </mat-form-field>
                     </form>
                 </div>
             </div>
