product detail page

--- a/common-features/common-features-ui/src/app/console/console.component.html
+++ b/common-features/common-features-ui/src/app/console/console.component.html
@@ -54,7 +54,7 @@
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <mat-divider/>
-                    <a mat-list-item routerLink="/roles"><span class="sidenav-section">Products</span></a>
+                    <a mat-list-item [routerLink]="['/console/products']"><span class="sidenav-section">Products</span></a>
                     <mat-divider/>
                     <a mat-list-item routerLink="/roles"><span class="sidenav-section">Pricing</span></a>
                     <mat-divider/>
