--- a/common-features/common-features-ui/src/app/console/products/product/product.component.html
+++ b/common-features/common-features-ui/src/app/console/products/product/product.component.html
@@ -3,9 +3,9 @@
 		<div class="flex-child-element"><h3>Products Management</h3></div>
 		<div class="flex-child-element">
 			<div class="control-align-right">
-				<button mat-raised-button color="primary" (click)="openDialogCreateAccount()"><mat-icon>add</mat-icon>Add New</button>
-				<button mat-raised-button color="primary" (click)="openDialogImportAccount()"><mat-icon>add</mat-icon>Import</button>
-				<button mat-raised-button color="warn" (click)="openDialogDeleteAccount()"><mat-icon>delete</mat-icon>Delete</button>
+				<button mat-raised-button color="primary" (click)="openDialogCreateProduct()"><mat-icon>add</mat-icon>Add New</button>
+				<button mat-raised-button color="primary" (click)="openDialogImportProducts()"><mat-icon>add</mat-icon>Import</button>
+				<button mat-raised-button color="warn" (click)="openDialogDeleteProduct()"><mat-icon>delete</mat-icon>Delete</button>
 			</div>
 		</div>
 	</div>
