Add angular material

--- a/frontend/src/main/webapp/app/auction/create/create.component.html
+++ b/frontend/src/main/webapp/app/auction/create/create.component.html
@@ -55,23 +55,35 @@
                     <div class="row">
                         <label for="staticEmail" class="col-sm-6 col-form-label">Bid Increment (VND)</label>
                         <div class="col-sm-6">
-                          <input type="text" class="form-control-plaintext" id="staticEmail" value="">
+                          <!-- <input type="text" class="form-control-plaintext" id="staticEmail" value=""> -->
+                          <mat-form-field style="width: 100%;">
+                            <mat-label></mat-label>
+                            <input matInput placeholder="1.000.000" value="">
+                          </mat-form-field>
                         </div>
                     </div>
                     <div class="row">
                         <label for="staticEmail" class="col-sm-6 col-form-label">Start at</label>
                         <div class="col-sm-6">
-                          <input type="text" class="form-control-plaintext" id="staticEmail" value="">
+                          <!-- <input type="text" class="form-control-plaintext" id="staticEmail" value=""> -->
+                          <mat-form-field style="width: 100%;">
+                            <mat-label></mat-label>
+                            <input matInput placeholder="" value="">
+                          </mat-form-field>
                         </div>
                     </div>
                     <div class="row">
                         <label for="staticEmail" class="col-sm-6 col-form-label">End in</label>
                         <div class="col-sm-6">
-                          <input type="text" class="form-control-plaintext" id="staticEmail" value="">
+                          <!-- <input type="text" class="form-control-plaintext" id="staticEmail" value=""> -->
+                          <mat-form-field style="width: 100%;">
+                            <mat-label></mat-label>
+                            <input matInput placeholder="" value="">
+                          </mat-form-field>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-end my-5">
-                        <span class="btn btn-success btn-sm" style="width: 50%;">Create</span>
+                        <button mat-flat-button color="primary" style="width: 50%;">Create</button>
                     </div>
                 </div>
             </div>
@@ -80,13 +92,21 @@
             <div class="row">
                 <label for="staticEmail" class="col-sm-4 col-form-label">Product Name</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="">
+                  <!-- <input type="text" class="form-control-plaintext" id="staticEmail" value=""> -->
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Macbook" value="">
+                  </mat-form-field>
                 </div>
             </div>
             <div class="row">
                 <label for="staticEmail" class="col-sm-4 col-form-label">Product Price</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="">
+                  <!-- <input type="text" class="form-control-plaintext" id="staticEmail" value=""> -->
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="1.000.000" value="">
+                  </mat-form-field>
                 </div>
             </div>
             <div class="my-4 my-main-color">
@@ -94,46 +114,87 @@
             </div>
             <div class="row">
                 <div class="col-sm-6">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="Key">
+                    <mat-form-field style="width: 100%;">
+                      <mat-label></mat-label>
+                      <input matInput placeholder="Key" value="">
+                    </mat-form-field>
                   </div>
                 <div class="col-sm-6">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="value">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Value" value="">
+                  </mat-form-field>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="Key">
-                  </div>
-                <div class="col-sm-6">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="value">
+              <div class="col-sm-6">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Key" value="">
+                  </mat-form-field>
                 </div>
+              <div class="col-sm-6">
+                <mat-form-field style="width: 100%;">
+                  <mat-label></mat-label>
+                  <input matInput placeholder="Value" value="">
+                </mat-form-field>
+              </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="Key">
-                  </div>
-                <div class="col-sm-6">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="value">
+              <div class="col-sm-6">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Key" value="">
+                  </mat-form-field>
                 </div>
+              <div class="col-sm-6">
+                <mat-form-field style="width: 100%;">
+                  <mat-label></mat-label>
+                  <input matInput placeholder="Value" value="">
+                </mat-form-field>
+              </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="Key">
-                  </div>
-                <div class="col-sm-6">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="value">
+              <div class="col-sm-6">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Key" value="">
+                  </mat-form-field>
                 </div>
+              <div class="col-sm-6">
+                <mat-form-field style="width: 100%;">
+                  <mat-label></mat-label>
+                  <input matInput placeholder="Value" value="">
+                </mat-form-field>
+              </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="Key">
-                  </div>
-                <div class="col-sm-6">
-                  <input type="text" class="form-control-plaintext" id="staticEmail" value="" placeholder="value">
+              <div class="col-sm-6">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Key" value="">
+                  </mat-form-field>
                 </div>
+              <div class="col-sm-6">
+                <mat-form-field style="width: 100%;">
+                  <mat-label></mat-label>
+                  <input matInput placeholder="Value" value="">
+                </mat-form-field>
+              </div>
             </div>
-            <div class="row my-3" style="margin-left: 0px;">
-                <button class="btn btn-sm btn-success" style="width: 75px;">+</button>
+            <div class="row">
+              <div class="col-sm-6">
+                  <mat-form-field style="width: 100%;">
+                    <mat-label></mat-label>
+                    <input matInput placeholder="Key" value="">
+                  </mat-form-field>
+                </div>
+              <div class="col-sm-6">
+                <mat-form-field style="width: 100%;">
+                  <mat-label></mat-label>
+                  <input matInput placeholder="Value" value="">
+                </mat-form-field>
+              </div>
             </div>
             <div class="my-4 my-main-color">
                 Description
