--- a/frontend/src/main/webapp/app/auction/live/live.component.html
+++ b/frontend/src/main/webapp/app/auction/live/live.component.html
@@ -59,27 +59,30 @@
             </div>
             
             <ul class="list-inline list-unstyled">
-                <li class="list-inline-item btn btn-success btn-sm">+50.000</li>
-                <li class="list-inline-item btn btn-success btn-sm">+100.000</li>
-                <li class="list-inline-item btn btn-success btn-sm">+150.000</li>
-                <li class="list-inline-item btn btn-success btn-sm">+200.000</li>
-                <li class="list-inline-item btn btn-success btn-sm">+300.000</li>
-                <li class="list-inline-item btn btn-success btn-sm">+400.000</li>
-                <li class="list-inline-item btn btn-info btn-sm">+500.000</li>
-                <li class="list-inline-item btn btn-danger btn-sm">+1.000.000</li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+50.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+100.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+150.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+200.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+300.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="primary">+400.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="accent">+500.000</button></li>
+                <li class="list-inline-item my-1"><button mat-flat-button color="warn">+1.000.000</button></li>
             </ul>
             <div class="row d-flex justify-content-center my-4">
                 <hr class="hr w-50"/>
             </div>
             <form class="row">
                 <div class="col-md-5  d-flex justify-content-center">
-                    <input type="text" class="form-control input-sm" id="bidAmount" placeholder="">
+                    <mat-form-field>
+                        <mat-label></mat-label>
+                        <input matInput placeholder="1.000.000" value="">
+                    </mat-form-field>                    
                 </div>
                 <div class="col-md-5 d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success btn-sm" style="width: 100%; height: 80%;">Submit a bid (default + 20.000)</button>
+                    <button mat-flat-button color="primary" style="width: 100%; height: 70%;">Submit a bid (default + 20.000)</button>
                 </div>
                 <div class="col-md-2 d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary btn-sm" style="width: 100%; height: 80%">Export</button>
+                    <button mat-flat-button color="accent" style="width: 100%; height: 70%">Export</button>
                 </div>
             </form>
             <div class="row d-flex justify-content-center my-4">
@@ -167,7 +170,7 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center mb-5">
-                <span class="btn btn-success btn-sm" style="width: 100px;">Show More</span>
+                <button mat-flat-button color="primary" style="width: 130px;">Show More</button>
             </div>
         </div>
         <!-- detail info on the right -->
@@ -203,7 +206,7 @@
                         <p>Hello world, I am mr ABC ...</p>
                     </div>
                     <div class="row d-flex justify-content-center">
-                        <span class="btn btn-success btn-sm" style="width: 100px;">Show More</span>
+                        <button mat-flat-button color="primary" style="width: 130px;">Show More</button>
                     </div>
                 </div>
             </div>
