--- a/frontend/src/main/webapp/content/scss/vendor.scss
+++ b/frontend/src/main/webapp/content/scss/vendor.scss
@@ -10,5 +10,5 @@ eg $input-color: red;
 // Import Bootstrap source files from node_modules
 @import 'bootstrap/scss/bootstrap';
 @import 'bootswatch/dist/materia/bootswatch';
-
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
